fix: button width on mobile in Quotes

--- a/src/components/Wallet/CrossChain/Swap/SwapInner/Quotes/Quotes.module.scss
+++ b/src/components/Wallet/CrossChain/Swap/SwapInner/Quotes/Quotes.module.scss
@@ -45,6 +45,7 @@
 
             .button {
                 height: 50px;
+                max-width: unset;
                 font-size: 16px;
                 flex: unset;
             }
